[package]
name = "supreme-train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.6.0"

[dependencies]
anyhow = "1.0.51"
axum = "0.3.4"
env_logger = "0.9.0"
log = "0.4.14"
nanoid = "0.4.0"
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.72"
tokio = {version="1.14.0", features=["macros", "rt-multi-thread"]}
tonic = "0.6.1"
prost = "0.9.0"
